--- a/sig-alternate-sample.tex
+++ b/sig-alternate-sample.tex
@@ -78,7 +78,7 @@
 %\crdata{0-12345-67-8/90/01}  % Allows default copyright data (0-89791-88-6/97/05) to be over-ridden - IF NEED BE.
 % --- End of Author Metadata ---
 
-\title{BDA: A Platform for Big Data Analysis}
+\title{A Platform for Big Data Analysis}
 \subtitle{[Extended Abstract]
 \titlenote{A full version of this paper is available as
 \textit{Author's Guide to Preparing ACM SIG Proceedings Using
@@ -180,7 +180,8 @@ email: {\texttt{jsmith@affiliation.org}}) and Julius P.~Kumquat
 
 \maketitle
 \begin{abstract}
-Big data processing and machine learning have made the world a better place. However, configuring machine learning task is always a complicated job. BDA is a GUI-based platform for big data analysis and mining, which provides a wealth of machine learning algorithms. Based on Hadoop and Spark, BDA is able to process massive datasets. One begins a task by construct dataflow based acyclic graph of algorithms with GUI. Each link in the acyclic graph represents a dataflow between algorithms. Machine learning is made easy, beautiful and understandable in BDA.
+Big data processing and machine learning have made the world a better place. However, configuring machine learning task is always a complicated job. Our system aimed to make machine learning task easy. It's a GUI-based platform designed on distributed system for big data analysis and mining. In the system, tasks are formulated by dataflow, resources are highly reusable, heterogeneous programs are mix-runnable. Meanwhile, based on Hadoop and Spark, the system is able to process massive datasets.
+
 \end{abstract}
 
 
@@ -235,129 +236,97 @@ Big data processing and machine learning have made the world a better place. How
 \keywords{Data Mining; Big Data Analysis; Machine Learning}
 
 \section{Introduction}
-Data mining and analysis have been widely use in many industry verticals, such as financial services, communications, retail and e-commerce. However, configuring and going through the whole roadmap of data mining and analysis will be a complicated job. Integrated applications that facilitate going through the data mining and analysis job are widely demanded for data scientists and business analysts. 
+Data mining and analysis have been widely used in many industry verticals, such as financial services, communications, retails and e-commerces. However, configuring and going through the whole roadmap of data mining and analysis will be a complicated job. Integrated applications that facilitate going through the data mining and analysis job are widely demanded for data scientists and business analysts. 
 
-Traditional tools like SAS, SPSS show their strength on descriptive and diagnostic analytics, and are useful for static structural datasets. However, they are not cloud-based, which limited the usage of advanced techniques in distributed systems. Systems like Azure Machine Learning and Alibaba Yushanfang are modern cloud platform for data scientists to design data experiments.
+Traditional tools like SAS, SPSS show their strength on descriptive and diagnostic analytics, and are useful for static structural datasets. However, they are not cloud-based, which limited the usage of advanced techniques in distributed systems. 
 
-Modern analysis tools shares features, such as native support advanced analytic modeling techniques, visualization of dataflow design, ability to save dataflows into files and libraries for later reuse, allowing program using scripting language.
+Aimed to facilitate data mining and analysis job, and apply machine learning to big data, we implements a modern cloud-based big data analysis system.
 
-We present a modern cloud-based Big Data Analysis(BDA) system, which meets features described above. It's design on distributed system, Hadoop and Spark, and choose Oozie as job scheduler. 
+ Tasks in our system are formulated by GUI-based dataflow framework, that will be easy to create and understand. Also, resources like programs, datasets, job schemas and output results are highly reusable in our system. Besides, our system support heterogeneous programs, which are different languages and standalone or distributed, run together in the same job. In addition, the system is designed on distributed system, Hadoop and Spark, and choose Oozie as job scheduler, so that the system's scalability and performance is guaranteed.
 
-\section{TECHNOLOGY SPECIFICATION}
+In following sections, we first introduce the system overview and then explains our system main features. Finally, we give the demonstration plan.
+\section{System Overview}
 \subsection{System Architecture}
-BDA is a GUI-based platform designed on distributed system. It applied HDFS as storage, Spark and Map-Reduce as computation framework, and Oozie as job scheduler. Figure~\ref{fig:arch} shows system architecture.
+BDA is a GUI-based platform designed on distributed system. Figure~\ref{fig:arch} shows our system architecture.
 
-\begin{figure}
+\begin{figure}[!htb]
 \centering
-\includegraphics[height=2.8in]{cikm-architecture.eps}
+\includegraphics[height=2.8in]{arch.eps}
 \caption{ A overview of BDA architecture.}
 \label{fig:arch}
 \end{figure}
 
-We divide the architecture into three hierarchy: Resource Management Layer, Schedule and Computation Layer and User Interface Layer.
+The architecture is divided into two hierarchies: Infrastructure Structure Layer and User Interface Layer.
 \begin{itemize}
-\item \textbf{Resource Management Layer:} This layer focuses on how to store the resources and datasets. We use database to store meta data of programs and jobs, while programs were stored on HDFS. All resources are stored on HDFS. And, Hive was applied to facilitates reading, writing, and managing large datasets residing in HDFS using SQL.
-\item \textbf{Schedule and Computation Layer:} This layer focuses on how bda jobs are dispatched and executed. BDA applied Oozie as job scheduler. Each actions in the job will be dispatched to any node in the Haddop cluster by YARN and run as a Map task. Spark and Map-Reduce is our foundation of distributed computation framework.
-\item \textbf{User Interface Layer:} This layer focuses how to provide friendly functionality for data scientists. There are three components, BDA Studio, BDA Lib and BDA Task. BDA Studio is a web service which support graphic-based components, program-able components, and dataflow based acyclic job graph constructions. BDA Lib provides a wealth of machine learning algorithms. BDA Task provides examples of real use cases.
-\end{itemize}
-We will introduce how these layer cooperation.
-
-
-\section{BDA Lib}
-BDA Lib is the algorithm library of BDA, it provides a wealth of machine learning, data mining algorithms. We have both Standalone and Spark implementations for each algorithm. All these algorithms are uploaded to BDA system and categorized as pre-processing, transformation, machine learning, and evaluation. Besides, we provide a sort of API for BDA Lib.
-
-Each algorithm upload to BDA will be persist as a directory on HDFS, in which there are a run script of the algorithm, a directory named "lib". Run script is generated for algorithm to help start up the algorithm program. The directory "lib" contains all resources and executable files that are demand when the algorithm is used.
-
-When uploading to BDA, the usage command line format of algorithm must be correctly configured. Otherwise, algorithm won't run successfully. The real command line would be generated when a BDA job is submitted, with configurations of algorithms. The command line format must be defined following the rules bellow:
-
-\begin{itemize}
-\item \textbf{For Input File Position Holder:}
-
- \{in:ContentType:"descriptions"\}
-\item \textbf{For Output File Position Holder:}
-
-\{out:ContentType,StorageType:"descriptions"\}
-\item \textbf{For Numerical Parameter Position Holder:}
-
-["parameter name":Type,min,max:default,value]
-\item \textbf{For Boolean Parameter Position Holder:}
-
-["parameter name":Bool:default,value]
-\item \textbf{For String Parameter Position Holder:}
-
- ["parameter name":String:default,"value"]
+\item \textbf{Infrastructure Structure Layer:} We use database to store meta data of programs and jobs, while other resources are stored on HDFS or managed by Hive. Jobs are scheduled by Oozie. Spark and Map-Reduce are our foundation of distributed computation framework.
+\item \textbf{User Interface Layer:} This layer focuses how to provide friendly functionality for data scientists. There are two components, BDA Studio, BDA Lib.
 \end{itemize}
 
-ContentType specifies the format of file contents, where General as general files, LibSVM, TSV, CSV, Binary, JSON, XML.
 
-StoreType specifies how the resources is store on HDFS, where SFile as a single file, HFile as a Hadoop distributed file, and Directory.
+\subsection{BDA Studio}
+BDA Studio is a GUI-based web service on the top of BDA architecture. One must register on BDA Studio, before using BDA system. BDA Studio provides services like job creation, job management, program and dataset upload and management, and account management. It cooperates with Hadoop, Spark and Oozie that allowed data scientists to access to resources and services provided by BDA easily.
 
-For numerical parameter, Type specifies the parameter types which may be Integer, Double or Float. In additions, the min and max value could be skipped if there are no minimum or maximum limitations.
+It's a client of Hadoop, Spark, and Oozie services. When a job is created, it will create job's application path on HDFS, and sent job to Oozie for scheduling and run it on cloud-side finally. A job in BDA system denotes an unit of machine learning task, and is allowed to edit and rerun.
 
-Here comes an example of logistic regression(LR) command line format, it specifies the usage of LR train. $train\_pt$, $validate\_pt$, and $model\_pt$ are input files. $optimizer$, $max\_iter$, $reg$ and $learn\_rate$ are parameters of LR.
-
-$$
-\begin{array}{ll}
-java~-cp~local.jar & bda.local.runnable.LR.Train \\
---train\_pt & \{in:LibSVM:"train~set"\}\\
---validate\_pt & \{in:LibSVM:"validate~set"\}\\
---model\_pt & \{out:Binary,HFile:"model"\}\\
---optimizer & ["opt":String:default,"sgd"]\\
---max\_iter & ["max\_iter":Integer:default,20]\\
---reg & ["reg":Double:default,0.01]\\
---learn\_rate & ["learn\_rate":Double:default,0.1]
-\end{array}
-$$
+Although BDA provides powerful functionalities, it's emphasized that BDA studio is light, scalable and easy to deploy, cause it only need a database like mysql, a web server like tomcat and some configurations of Hadoop, Spark and Oozie.
 
 
-\section{BDA Studio}
-BDA Studio is a GUI-based web service on the top of BDA architecture, allowed data scientists to access to resources and services provided by BDA easily. BDA Studio provides services like job schedule, distributed dispatch and execution, account management and resource management. 
+\subsection{BDA Lib}
+BDA Lib is the algorithm library of our system, it provides a wealth of machine learning, data mining algorithms that could be categorized as pre-processing, transformation, machine learning, and evaluation. We have both Standalone and Spark implementations for each algorithm. Also, we provide a sort of API for BDA Lib. 
 
-\begin{figure}
-\centering
-\includegraphics[height=3.5in]{proc.eps}
-\caption{ Process to perform job.}
-\label{fig:proc}
-\end{figure}
+All these algorithms are wrap as runnable programs and uploaded to our system. The runnable programs uploaded are displayed as program components of our system that are reusable. When using the algorithm, one need only click to add the corresponding component. In this way, the user is free to programming, that makes algorithms more easy use. Besides, our system allows registers to upload custom programs and third party programs to our system as well. This is different from traditional tools that are forbidden program upload.
 
-Figure~\ref{fig:proc} shows the process to perform a job. As is shown, one must construct a dataflow based acyclic graph of algorithms and datasets, where each arrow specify a dataflow. When a well-formed job graph is submitted, it will be scheduled by Oozie, and finally run on the cloud. We also provide job clone, rerun and edit functionalities which facilitates the reuse of job schemas after the job is finished. 
+\section{Main Features}
+BDA has devoted to provide powerful and light solution for machine learning tasks. And it has many advantages compared to traditional tools, such as enable to process massive data, high scalability and performance etc. Beyond that, we are going to introduce some particular features of our system.
 
+\subsection{Dataflow Based Directed Acyclic Graph}
+Before we discuss this section, let us make some clarification about workflow and dataflow.
 
-The main technical challenges we have encountered are: GUI based DAG construction; dataflow based on Oozie workflow; enable program running on the cloud; ETL.
+\begin{itemize}
+\item \textbf{Workflow:} is a collection of actions arranged in a control dependency DAG(Directed Acyclic Graph). Control dependency from one action to another means that the second action can't run until the first action has completed.
+\item \textbf{Dataflow:} is a collection of actions arrange in a data dependency DAG, where different actions may have several different data dependency.
+\end{itemize}
 
-Besides, user custom programs are allowed to submit to the platform with configuration. In addition, BDA also provide program-able components, which support SQL, Spark, and Shell. 
+The concept dataflow differed with workflow as to dataflow specify data dependency between different actions. And the control dependency of actions are determined by the data dependency.
 
+Specifically, the process of machine learning task could be formulated by workflow correctly. There exists some workflow systems, such as Oozie, Azkaban. However, input and output data locations must be configured by user in those systems before it was submitted, otherwise it will failed. This implied that user have to know about where data was or will be stored. However, we believe it's not major concern users should focus on, but how to construct the tasks and how about the results. 
 
-\subsection{Dataflow Based Acyclic Graph}
-We introduce dataflow based acyclic graph into BDA system based on Oozie workflow. And Oozie is a workflow scheduler system, where workflow is a collection of actions arranged in a control dependency DAG(Directed Acyclic Graph). Control dependency from one action to another means that the second action can't run until the first action has completed. The concept dataflow differed with workflow as to dataflow specify data dependency between different actions. And the control dependency of actions are determined by the data dependency.
+Exactly, dataflow formulation of machine learning task is better, since the data dependency between actions determined the control dependency and the storage concern is eliminated in this way. 
 
-
-\begin{figure}
+\begin{figure}[!htb]
 \centering
 \includegraphics[height=2in]{DAG.eps}
-\caption{ An example for dataflow based acyclic job graph.}
+\caption{An example of dataflow acyclic graph}
 \label{fig:dag}
 \end{figure}
 
-Figure~\ref{fig:dag} is an example for dataflow based acyclic job graph. Each algorithm or dataset uploaded to BDA, will be represented as a GUI component in BDA Studio, where the points on the top of component are dataflow input anchor points and on the bottom are dataflow output anchor points. Anchor points are generated according to algorithm data parameters. Each arrow represent as a data dependency between components. In addition, the arrow's start and end anchor points must be matched, otherwise the algorithm will not run correctly.
+We introduced dataflow based acyclic graph into BDA system based on Oozie workflow. Figure~\ref{fig:dag} is an example of dataflow acyclic graph, where each datasets and programs are display as GUI components. The node shape on the top of GUI components are regard as input data anchors of the program, while the node shape on the bottom are output anchors. Each arrow means a dataflow between components. And arrow couldn't be linked except the anchors are type matched.
 
-\subsection{Run jobs on the cloud}
+The Oozie workflow will be generated according to our dataflow DAG. UUID file name will be generated for intermediate output data when the task is submitted. Moreover, user could access to or save the intermediate data using BDA.
 
-When the job graph is submitting, uuid file name will be created against each dataflow output anchor points. Later, the file parameter holder of the command format will be replaced with real file name according to setting of anchor points. In additions, other parameter holder will be replaced according to real parameter settings.
+\subsection{Highly Reusable}
+As is shown above, BDA Studio has managed a lot of resources, include dataset, program, job schema, intermediate output data. And we have done effort to make these resources to obtain fully utilized, which is approved to improve our system's user experience.
 
-After the job is submitted, BDA Studio will generate Oozie workflow according to dataflow based acyclic job graph. And workflow will be upload to the job path created on HDFS. Finally, we will submit this job to Oozie server which 
+Reusability is highly supported in different aspects and granularity by our system.  Correspondingly, we have datasets and program reuse, job schema reuse and intermediate output data reuse.
 
-Each Oozie action collected in the workflow will run as a Hadoop map task when it's scheduled. During the action, run script of respected algorithm will be sent to task container at first. Then run script will be started up. During the execution of the run script, it will configure the environment, download "lib" directory, execute the real command line, and upload file yielded to job path.
+The datasets and programs could be shared across different users, so that one may not need to upload a new program or dataset if there exists one in our system. Although, it is never mind to exists several program for the same algorithm, that gives user more choices and help select out the one better. 
 
-\subsection{Edit and reuse job schema}
-BDA job, 数据重用等等.
+The job schema is a XML document defines the elements, parameters and types that represent a job in BDA. With job schema, it is easily to save, modify, reload and reuse a job. When the job finished error or one need to modify the job, it is not necessary to create a job new. One could directly open the old job and modify, then rerun it. Accordingly, the job schema will be update after the job is edited, while the old one be backed. We also support url get request for job, so that one could share and access to a job easily. In addition, jobs are enable to be clone that greatly facilitate who want to construct several similar jobs.
 
-\subsection{Program-able Component}
-What’s program-able component?
-It’s important to ETL. The significance of ETL.
-The technology specification 
+Intermediate output data is also reuse in our system. The same input and parameters for the same program will generate the same result( without randomness). It's not required to run every time even if the program has random. Therefore, it would reduce running time and save computation and storage greatly with reuse of intermediate output data. We support intermediate output data save and download functions. When a job is modify, we intelligently analysis whether actions in the job should be rerun according to actions' configuration. If the rerun actions will reuse the intermediate output data of non-rerun ones.
 
-\section{Appendix}
+
+\subsection{Heterogeneous System Architecture}
+
+As we all known, machine learning task always contains several procedures, such as ETL, feature engineering, and model training and evaluation. Usually, totally different programs or tools would be applied in those procedures. Those programs or tools might be implemented in different languages and run in different manners( Standalone or Distributed, Map-Reduce or Spark etc.) appropriately. 
+
+Fortunately, machine learning procedures are regarded as data transformation in dataflow framework. That's machine learning procedures are black boxes communication with data flows. And it's never mind that procedures are heterogeneous.
+
+There is no worry about heterogeneous programs run together in our system. Because all resources are persist on HDFS or managed by Hive in our system. We just only to focus on the problem how to access to resources on distributed system for standalone programs or tools. And our approach of the problem is fairly simple. That's we will download the resources demanded for the standalone program before start up it and then upload the result outputs after it finished.
+
+In our system, we support tools of different languages run together, includes C/C++, Java, Scala, python, shell etc. In this way, the program uploaded to our system won't be limited by which language it implemented with. That gives user more unrestrained choices.
+
+Moreover, we also support standalone and distributed programs run together. For some small dataset, standalone programs might be more time saving and less resource consuming. While, distributed programs have advantages in processing massive data. Hence, with the correct combinations of programs, our system will leverage their advantages.
 
 \section{Conclusions}
 This paragraph will end the body of this sample document.
@@ -380,66 +349,10 @@ authors would like to thank Gerald Murray of ACM for
 his help in codifying this \textit{Author's Guide}
 and the \textbf{.cls} and \textbf{.tex} files that it describes.
 
-%
-% The following two commands are all you need in the
-% initial runs of your .tex file to
-% produce the bibliography for the citations in your paper.
-\bibliographystyle{abbrv}
-\bibliography{sigproc}  % sigproc.bib is the name of the Bibliography in this case
-% You must have a proper ".bib" file
-%  and remember to run:
-% latex bibtex latex latex
-% to resolve all references
-%
-% ACM needs 'a single self-contained file'!
-%
 %APPENDICES are optional
 %\balancecolumns
 \appendix
 %Appendix A
 \section{Headings in Appendices}
-The rules about hierarchical headings discussed above for
-the body of the article are different in the appendices.
-In the \textbf{appendix} environment, the command
-\textbf{section} is used to
-indicate the start of each Appendix, with alphabetic order
-designation (i.e. the first is A, the second B, etc.) and
-a title (if you include one).  So, if you need
-hierarchical structure
-\textit{within} an Appendix, start with \textbf{subsection} as the
-highest level. Here is an outline of the body of this
-document in Appendix-appropriate form:
-\subsection{Introduction}
-\subsection{The Body of the Paper}
-\subsubsection{Type Changes and  Special Characters}
-\subsubsection{Math Equations}
-\paragraph{Inline (In-text) Equations}
-\paragraph{Display Equations}
-\subsubsection{Citations}
-\subsubsection{Tables}
-\subsubsection{Figures}
-\subsubsection{Theorem-like Constructs}
-\subsubsection*{A Caveat for the \TeX\ Expert}
-\subsection{Conclusions}
-\subsection{Acknowledgments}
-\subsection{Additional Authors}
-This section is inserted by \LaTeX; you do not insert it.
-You just add the names and information in the
-\texttt{{\char'134}additionalauthors} command at the start
-of the document.
-\subsection{References}
-Generated by bibtex from your ~.bib file.  Run latex,
-then bibtex, then latex twice (to resolve references)
-to create the ~.bbl file.  Insert that ~.bbl file into
-the .tex source file and comment out
-the command \texttt{{\char'134}thebibliography}.
-% This next section command marks the start of
-% Appendix B, and does not continue the present hierarchy
-\section{More Help for the Hardy}
-The sig-alternate.cls file itself is chock-full of succinct
-and helpful comments.  If you consider yourself a moderately
-experienced to expert user of \LaTeX, you may find reading
-it useful but please remember not to change it.
-%\balancecolumns % GM June 2007
-% That's all folks!
+
 \end{document}
